--- a/src/components/Expenses/ExpensesFilter.css
+++ b/src/components/Expenses/ExpensesFilter.css
@@ -1,10 +1,6 @@
 .expenses-filter {
   color: white;
-  padding: 1rem;
-  background-color: rgb(31, 31, 31);
-  margin: 2rem auto;
-  width: 50rem;
-  max-width: 95%;
+  padding: 0 1rem;
 }
 
 .expenses-filter__control {
