--- a/src/components/Users/AddUser.scss
+++ b/src/components/Users/AddUser.scss
@@ -1,17 +1,17 @@
-.users__add {
+.add-user {
   border-radius: 10px;
   padding: 1rem;
 
-  & .user-form {
+  &__form {
     display: grid;
 
     &>* {
       margin-bottom: 0.25rem;
     }
+  }
 
-    &__button {
-      justify-self: start;
-      margin-top: 0.3rem;
-    }
+  &__button {
+    justify-self: start;
+    margin-top: 0.3rem;
   }
 }
