--- a/src/index.scss
+++ b/src/index.scss
@@ -20,6 +20,6 @@ body {
   font-weight: 300;
   line-height: 1.6;
 
-  background-color: #131313;
+  background-color: #1f1f1f;
   min-height: 100vh;
 }
