--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,8 +1,10 @@
 @use 'abstracts/mixins';
 @use 'abstracts/variables';
 
+@use 'base/animations';
 @use 'base/base';
 @use 'base/typography';
+@use 'base/utilities';
 
 @use 'components/button';
 @use 'components/icon';
