--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -5,6 +5,8 @@
 
   --colour-primary: #8a2b06;
   --colour-primary-dark: #641e03;
+  --colour-primary-dark-2: #4d1601;
+  --colour-primary-dark-3: #2c0d00;
 
   // FONT
   --default-font-size: 1.6rem;
