sec12: layout header

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -2,14 +2,19 @@
   // COLOURS
   --colour-black: #000;
   --colour-white: #fff;
+  --colour-grey-dark-2: #3f3f3f;
 
   --colour-primary: #8a2b06;
+  --colour-primary-light: #b94517;
   --colour-primary-dark: #641e03;
   --colour-primary-dark-2: #4d1601;
   --colour-primary-dark-3: #2c0d00;
 
   // FONT
   --default-font-size: 1.6rem;
+
+  // LAYOUT
+  --header-height: 4.5rem;
 
   // --colour-primary-light: #ff3366;
   // --colour-primary-dark: #ba265d;
