--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -66,8 +66,8 @@
     border-radius: 10rem;
     padding: 0 0.8rem;
 
-    background-color: var(--colour-primary);
-    border-color: var(--colour-primary);
+    background-color: var(--colour-primary-light);
+    border-color: var(--colour-primary-light);
 
     display: flex;
     justify-content: center;
