--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -2,6 +2,7 @@
   // COLOURS
   --colour-black: #000;
   --colour-white: #fff;
+  --colour-grey-dark-1: #383838;
   --colour-grey-dark-2: #3f3f3f;
 
   --colour-primary: #8a2b06;
