--- a/src/sass/components/meal/_meal.scss
+++ b/src/sass/components/meal/_meal.scss
@@ -1,3 +1,4 @@
+// Meal Summary
 .meal-summary {
   flex: 0 1 clamp(40rem, 35vw, 90rem);
   background-color: var(--colour-grey-dark-1);
@@ -20,5 +21,30 @@
 
   &__text {
     margin-bottom: 1rem;
+  }
+}
+
+// Meal item
+.meal-item {
+  color: var(--colour-black);
+
+  &__details {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__title {
+    font-size: 1.2rem;
+    font-weight: 700;
+  }
+
+  &__description {
+    font-style: italic;
+  }
+
+  &__price {
+    font-size: 1.3rem;
+    font-weight: 800;
+    color: var(--colour-primary-light);
   }
 }
