--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -19,17 +19,17 @@ html {
   // leaving this in _base.scss as it is to define what 1rem is
   font-size: 62.5%;
 
-  @include mixins.respond(tab-land) {
-    font-size: 56.25%; // 1 rem = 9px, 9/16 = 56.25%
-  }
+  // @include mixins.respond(tab-land) {
+  //   font-size: 56.25%; // 1 rem = 9px, 9/16 = 56.25%
+  // }
 
-  @include mixins.respond(tab-port) {
-    font-size: 50%; // 1 rem = 8px, 8/16 = 50%
-  }
+  // @include mixins.respond(tab-port) {
+  //   font-size: 50%; // 1 rem = 8px, 8/16 = 50%
+  // }
 
-  @include mixins.respond(big-desktop) {
-    font-size: 75%; // 1 rem = 12px, 12/16 = 75%
-  }
+  // @include mixins.respond(big-desktop) {
+  //   font-size: 75%; // 1 rem = 12px, 12/16 = 75%
+  // }
 }
 
 body {
