--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 
 @use 'components/ui/button';
 @use 'components/ui/icon';
+@use 'components/ui/form';
 @use 'components/meal/meal';
 
 @use 'layout/header';
