--- a/src/sass/components/meal/_meal.scss
+++ b/src/sass/components/meal/_meal.scss
@@ -7,7 +7,6 @@
   flex-direction: column;
   align-items: center;
 
-  border-radius: 14px;
   padding: 1.5rem 0.8rem;
 
   & > * {
@@ -56,4 +55,9 @@
     align-items: end;
     row-gap: 0.5rem;
   }
+}
+
+// Available Meals
+.meals-available {
+  color: crimson;
 }
