--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,7 @@
 @use 'components/ui/button';
 @use 'components/ui/icon';
 @use 'components/ui/form';
+@use 'components/ui/card';
 @use 'components/meal/meal';
 
 @use 'layout/header';
