--- a/src/sass/components/meal/_meal.scss
+++ b/src/sass/components/meal/_meal.scss
@@ -2,11 +2,13 @@
 .meal-summary {
   flex: 0 1 clamp(40rem, 35vw, 90rem);
   background-color: var(--colour-grey-dark-1);
+  box-shadow: 0 0.1rem 1.8rem 1rem rgba(0, 0, 0, 0.25);
 
   display: flex;
   flex-direction: column;
   align-items: center;
 
+  border-radius: 14px;
   padding: 1.5rem 0.8rem;
 
   & > * {
@@ -59,5 +61,17 @@
 
 // Available Meals
 .meals-available {
-  color: crimson;
+  background-color: var(--colour-white);
+  padding: 2rem;
+  border-radius: 14px;
+
+  li {
+    list-style: none;
+    border-bottom: 1px solid var(--colour-grey-light-1);
+    padding-bottom: 1rem;
+
+    &:not(:first-child) {
+      padding-top: 1rem;
+    }
+  }
 }
