sec12: CSS adjustments (including main content bg-image)

--- a/src/sass/components/meal/_meal.scss
+++ b/src/sass/components/meal/_meal.scss
@@ -54,7 +54,7 @@
   &__add {
     display: flex;
     flex-direction: column;
-    align-items: end;
+    align-items: flex-end;
     row-gap: 0.5rem;
   }
 }
