--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -11,6 +11,9 @@
 
 html {
   box-sizing: border-box;
+  /* TODO: remove adjustment of font-size, so that it is still the browser default (16px), then
+           sort out the adjustments for different device sizes  */
+
   /* font-size: 10px;
       better practice to use percentage,
       as user may have a font-size setting on their browser */
@@ -34,7 +37,7 @@ html {
 
 body {
   padding: 3rem;
-  min-height: 100vh;
+  min-height: 100dvh;
 
   @include mixins.respond(tab-port) {
     padding: 0;
