--- a/src/sass/layout/_content.scss
+++ b/src/sass/layout/_content.scss
@@ -7,11 +7,10 @@
 
 .bg-image {
   position: absolute;
-  top: -76px;
+  top: -20dvh;
   left: 0;
   width: 100%;
-  height: 40vh;
-  max-height: 411px; // the height of the jpg being used
+  height: 40dvh;
   overflow: hidden;
   clip-path: polygon(0 0, 100% 0, 100% 82%, 12% 100%, 0 100%);
 
