sec12: UI Chip componenet

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,4 +13,5 @@
 @use 'components/ui/icon';
 @use 'components/ui/form';
 @use 'components/ui/card';
+@use 'components/ui/chip';
 @use 'components/meal/meal';
