sec12: Typography, change default color to be black

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,5 +1,6 @@
 .header {
   background-color: var(--colour-primary);
+  color: var(--colour-white);
   // display: grid;
   // grid-template-columns: 10% 1fr 1fr 10%;
   // align-items: center;
