--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -4,5 +4,5 @@ body {
   font-family: 'Noto Sans JP', sans-serif;
   font-weight: 400;
   line-height: 1.7;
-  color: var(--colour-white);
+  color: var(--colour-black);
 }
