--- a/src/sass/components/meal/_meal.scss
+++ b/src/sass/components/meal/_meal.scss
@@ -1,6 +1,7 @@
 // Meal Summary
 .meal-summary {
   flex: 0 1 clamp(40rem, 35vw, 90rem);
+  color: var(--colour-white);
   background-color: var(--colour-grey-dark-1);
   box-shadow: 0 0.1rem 1.8rem 1rem rgba(0, 0, 0, 0.25);
 
@@ -27,7 +28,6 @@
 
 // Meal item
 .meal-item {
-  color: var(--colour-black);
   display: flex;
   justify-content: space-between;
 
