sec12: cart item tests, added for increment/decrement buttons

--- a/src/sass/components/cart/_cart.scss
+++ b/src/sass/components/cart/_cart.scss
@@ -17,7 +17,7 @@
 
   &__price {
     font-weight: 800;
-    color: var(--colour-primary-light);
+    color: var(--colour-primary);
   }
 
   &__amount {
@@ -25,7 +25,7 @@
   }
 
   &__actions {
-    display: flex;
+    display: inline-flex;
     justify-content: flex-end;
 
     & > *:not(:last-child) {
