--- a/src/sass/components/cart/_cart.scss
+++ b/src/sass/components/cart/_cart.scss
@@ -1,3 +1,27 @@
+.cart {
+  &__list-item {
+    list-style: none;
+    border-bottom: 2px solid var(--colour-primary);
+    padding: 1rem 0;
+    margin: 1rem 0;
+  }
+
+  &__total {
+    display: flex;
+    justify-content: space-between;
+    margin: 1rem 0;
+
+    font-size: 1.8rem;
+    font-weight: 700;
+  }
+
+  &__actions {
+    display: flex;
+    justify-content: flex-end;
+    gap: 1rem;
+  }
+}
+
 .cart-item {
   display: flex;
   justify-content: space-between;
