sec12: dialog UI component

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -9,6 +9,12 @@
   box-sizing: inherit;
 }
 
+*:focus,
+*:focus-visible,
+*:focus-within {
+  outline-color: var(--colour-primary-light);
+}
+
 html {
   box-sizing: border-box;
 
