--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,5 +14,6 @@
 @use 'components/ui/form';
 @use 'components/ui/card';
 @use 'components/ui/chip';
+@use 'components/ui/dialog';
 @use 'components/meal/meal';
 @use 'components/cart/cart';
