--- a/src/sass/components/meal/_meal.scss
+++ b/src/sass/components/meal/_meal.scss
@@ -1,13 +1,9 @@
 // Meal Summary
 .meal-summary {
-  flex: 0 1 clamp(40rem, 35vw, 90rem);
+  max-width: clamp(45rem, 45vw, 90rem);
   color: var(--colour-white);
   background-color: var(--colour-grey-dark-1);
   box-shadow: 0 0.1rem 1.8rem 1rem rgba(0, 0, 0, 0.25);
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 
   border-radius: 14px;
   padding: 1.5rem 0.8rem;
@@ -61,6 +57,8 @@
 
 // Available Meals
 .meals-available {
+  width: 100%;
+  max-width: clamp(60rem, 60vw, 90rem);
   background-color: var(--colour-white);
   padding: 2rem;
   border-radius: 14px;
